fixed spacing and fixed inputs for create

--- a/src/components/AdminPageContainer/AdminPageContainer.module.css
+++ b/src/components/AdminPageContainer/AdminPageContainer.module.css
@@ -39,5 +39,6 @@
         width: unset;
         margin: 0 !important;
         padding: 0 !important;
+        overflow-x: hidden;
     }
   }
