--- a/styles/pages/admin.module.css
+++ b/styles/pages/admin.module.css
@@ -1,5 +1,6 @@
 .title{
     color: #000000;
+    margin-top: 8px;
 }
 
 .cardContainer{
