--- a/styles/pages/campaign.module.css
+++ b/styles/pages/campaign.module.css
@@ -1,3 +1,7 @@
 .label{
     margin-top: 8px;
 }
+
+.formRow{
+    min-width: 50%;
+}
